//  
// Copyright (c) BRNO UNIVERSITY OF TECHNOLOGY. All rights reserved.  
// Licensed under the MIT License. See LICENSE file in the solution root for full license information.  
//
syntax = "proto3";
package ndx.model;
option java_package = "org.ndx.model";
import "VariantModel.proto";

/// Represents an event type specification. 
message Event {
    /// The name of the event. 
	string Name = 1;
    /// The timestamp of the event. 
    long Timestamp = 2;
    /// Properties of the event.
	map<string,Variant> FieldMap = 10;
}